# sefi

./: ARCHITECTURE.md  BUILD_PLAN.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  HANDOFF_M1.1.md  HANDOVER.md  README.md  STATUS.md
docs/: QUESTIONS.md  SPEC.md
src/: lib.rs  types.rs
src/clustering/: mod.rs
src/embed/: mod.rs
src/feedback/: mod.rs
src/governor/: mod.rs
src/ledger/: mod.rs  store.rs
src/validator/: mod.rs
src/viz/: mod.rs
