[package]
name = "sefi"
version = "0.1.0"
edition = "2021"

[dependencies]
# GPU compute (VLC-proven stack)
wgpu = "22.0"
bytemuck = { version = "1.19", features = ["derive"] }
pollster = "0.4.0"

# Math (minimal)
nalgebra = "0.33"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = "0.4"

[dev-dependencies]
approx = "0.5"

[[bin]]
name = "sefi"
path = "src/bin/sefi.rs"
